<resources>
    <string name="app_name">Projet Oiseaux</string>
    <string name="title_map">Map</string>
    <string name="title_search">Search</string>
    <string name="title_Share">Share</string>
    <string name="title_discovery">Discovery</string>
    <string name="title_Me">Me</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello TODO fragment</string>
    <string name="say_some_thing">say some thing ......</string>
    <string name="publicButton">public</string>
    <string name="location">Location</string>
    <string name="time">Time</string>
    <string name="search">Search</string>
    <string name="new_share">New Share</string>
</resources>