<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_geo_alt"
        android:title="@string/title_map" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_share"
        android:icon="@drawable/ic_plus_circle"
        android:showAsAction="always"
        android:title="@string/title_Share"
        tools:ignore="AppCompatResource" />

    <item
        android:id="@+id/navigation_discovery"
        android:icon="@drawable/ic_globe"
        android:title="@string/title_discovery" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications"
        android:title="@string/title_notifications" />


</menu>