<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_map">

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.example.projetoiseaux.ui.map.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.projetoiseaux.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_share"
        android:name="com.example.projetoiseaux.ui.share.ShareList.ShareListFragment"
        android:label="@string/title_Share"
        tools:layout="@layout/fragment_share_list" />

    <fragment
        android:id="@+id/navigation_discovery"
        android:name="com.example.projetoiseaux.ui.discovery.DiscoveryFragment"
        android:label="@string/title_discovery"
        tools:layout="@layout/fragment_discovery" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.projetoiseaux.ui.notifications.NotificationFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notification_list" />
</navigation>